--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.2",
     "algoliasearch": "^3.32.0",
-    "bootstrap": "^4.0.0",
+    "bootstrap": ">=4.1.2",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "rxjs": "~6.3.3",
